# imagedup

./: .pre-commit-config.yaml  Parameter Tunning.ipynb  README.md  pyproject.toml  setup.cfg
imagedup/: __main__.py  duplicates.py  kopernikus.py  parallel_map.py  shell.py  similarity.py  ungrouper.py
tests/: test_duplicates.py  test_kopernikus.py  test_parallel_map.py  test_ungrouper.py
